--- a/Ejercicio-4/Ejercicio4.html
+++ b/Ejercicio-4/Ejercicio4.html
@@ -1,18 +1,18 @@
 
 <!DOCTYPE html>
 
-<html lang='es'>
+<html lang='es'/>
 
 <head>
-    <meta charset='UTF-8'>
+    <meta charset='UTF-8'/>
     <!-- Metadatos de los documentos HTML5 -->
-    <meta name='author' content='Jesús Alonso Gárcia'>
+    <meta name='author' content='Jesús Alonso Gárcia'/>
     <!-- Definición de la ventana grafica -->
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <!-- Titulo de la página -->
     <title>Ejercicio 4</title>
     <!-- añadir el elemento link de enlace a la hoja de estilo dentro del <head> del documento html -->
-    <link rel='stylesheet' type='text/css' href='Ejercicio4.css'>
+    <link rel='stylesheet' type='text/css' href='Ejercicio4.css'/>
 </head>
 
 <body>
@@ -20,15 +20,15 @@
     <section>
         <form action='#' method='post' name='PrecioCobre'> 
             <label for='fecha'>Escoge la fecha: </label>
-            <input type='date' name ='date' id='fecha' max='2022-12-15'>
+            <input type='date' name ='date' id='fecha' max='2022-12-17'>
             <label for='currency'> Escoge la divisa: </label>
             <select id='currency' name='currency'>
                 <option value='EUR'> Euros </option>
                 <option value='USD'> Dolar </option>
                 <option value='GBP'> Libra </option>
             </select>
-            <input type='submit' value='Mirar el precio del cobre' name='data'>
-        </form><h2>Estos son los datos sobre el precio del cobre.</h2><p>El precio del cobre es a 2022-12-15: 0.19326853125 £/onza</p></section>
+            <input type='submit' value='Mirar el precio del cobre' name='data'/>
+        </form><h2>Estos son los datos sobre el precio del cobre.</h2><p>El precio del cobre es a 2022-12-17: 0.22246676184949 €/onza</p></section>
     </body>
 
 </html>
