--- a/Ejercicio-7/Ejercicio7.html
+++ b/Ejercicio-7/Ejercicio7.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 
-<html lang='es'>
+<html lang='es'/>
 
 <head>
     <!-- Datos que describen el documento -->
@@ -111,7 +111,7 @@
             </select>
             <input type='submit' name='eliminar' value='Eliminar'/>
         </form>
-        </section><p>Se ha eliminado carrera : Circuito de interlagos correctamente</p>
+        </section>
     </body>
 
 </html>
